--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+main {
+  background-color: purple;
+  margin: 100px 50px 100px 50px;
+  border: 10px solid black;
+  border-radius: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#head-section {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: flex-end;
+  margin: 10px;
+}
+
+h1 {
+  font-family: 'Russo One', sans-serif;
+  font-size: 25px;
+  text-align: center;
+}
+
+#screen {
+  background-color: yellowgreen;
+  border: 1px solid black;
+  margin: 20px;
+  padding: 0px 10px 0px 10px;
+  height: 100px;
+  font-family: 'Press Start 2P', cursive;
+  font-size: 12px;
+}
+
+#keyboard-container {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
 }
 
-.App-link {
-  color: #61dafb;
+.phone-buttons {
+  width: 85px;
+  height: 80px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#logo-container {
+  display: flex;
+  justify-content: center;
+  margin: 30px;
 }
+
