--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,11 @@ main {
   margin: 10px;
 }
 
+#turn-off-button {
+  background-color: purple;
+  border: none;
+}
+
 h1 {
   font-family: 'Russo One', sans-serif;
   font-size: 25px;
