--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
 
+body {
+  background-color: darkblue;
+  background-image: url("./sky_bckgnd.jpeg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
 .App {
   text-align: center;
 }
@@ -25,15 +32,15 @@ main {
 
 h1 {
   font-family: 'Russo One', sans-serif;
-  font-size: 25px;
+  font-size: 7vw;
   text-align: center;
 }
 
 #screen {
   background-color: yellowgreen;
-  border: 1px solid black;
+  border: 5px inset grey;
   margin: 20px;
-  padding: 0px 10px 0px 10px;
+  padding: 0vw 2.5vw 0vw 2.5vw;
   height: 100px;
   font-family: 'Press Start 2P', cursive;
   font-size: 12px;
@@ -49,7 +56,7 @@ h1 {
 }
 
 .screen-text {
-  padding: 0px 20px 0px 20px;
+  padding: 0vw 3vw 0vw 3vw;
   text-align: center;
 }
 
@@ -67,6 +74,59 @@ h1 {
 #logo-container {
   display: flex;
   justify-content: center;
-  margin: 30px;
+  margin: 10vw;
 }
 
+#logo {
+  width: 30vw;
+}
+
+@media screen and (min-width: 540px) and (max-width: 1249px) {
+  body {
+    background-color: darkblue;
+    background-image: url("./atoll-bckgnd.jpeg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+  }
+
+  main {
+    position: relative;
+    margin-left: 30vw;
+    margin-right: 30vw;
+    height: 400px;
+  }
+}
+
+@media screen and (min-width: 1250px) {
+  body {
+    background-color: darkblue;
+    background-image: url("./atoll-bckgnd.jpeg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: flex-end;
+    position: fixed;
+  }
+
+  main {
+    width: 25%;
+    height: 62%;
+    margin: 50px 0px 50px 200px;
+  }
+
+  h1 {
+    font-size: 30px;
+  }
+
+  #keyboard-container {
+    height: 20%;
+  }
+
+  #logo {
+    position: relative;
+    bottom: 8vw;
+    height: 50px;
+  }
+}
